* added S&K "Lock-On" hardware emulation (you can "lock" any games to Sonic & Knuckles).
* added Cartridge "hot swap" feature.
* added missing EEPROM support in some games.
* added accurate TMSS emulation (VDP lock-out)
* fixed Realtec mapper emulation: fixes missing sound in Balloon Boy / Funny World.
* fixed lightgun auto-detection: fixes default cursor position in Lethal Enforcers II.
* lots of code cleanup, bugfixes & optimization.


[Gamecube/Wii]
---------------
* implemented custom FONT engine (uses internal IPL font & GX hardware rendering).
* implemented custom GUI engine (uses GX hardware rendering & multithreading) 
* implemented advanced interface (IR pointing, game snapshots, visual & sound effects, BGM...).
* improved audio/video synchronization to ensure 100% smooth video AND audio playback.
* improved reset button behavior, now works more like the real Genesis reset button.
* improved lightgun cursors layout.
* added automatic ROM loading feature
* fixed stability issues and memory leaks.

[Wii only]
---------------
* added USB2 support through Hermes cIOS/mload (cIOS 202 is required)
* added Video Hardware Gamma control
* added Video Hardware "Trap Filter" control
* improved Mouse emulation through the Wiimote
* compiled with devkitPPC r21 & libOGC 1.8.3 (SDHC support, DVDX v2 support)




---------------------------------------------------------------------------------------------------------
Genesis Plus GX 1.3.1 (20/12/2008) (Eke-Eke)
---------------------------------------------------------------------------------------------------------

[Gamecube/Wii]

* improved sound engine
* modified frame synchronization (now use audio DMA interrupt)



---------------------------------------------------------------------------------------------------------
Genesis Plus GX 1.3.0 (14/12/2008) (Eke-Eke)
---------------------------------------------------------------------------------------------------------

[Core]

* YM2612 bugfixes (MAME core):